fixed weird spacing, css issue in onboarding

--- a/client/src/views/Onboarding.scss
+++ b/client/src/views/Onboarding.scss
@@ -56,14 +56,16 @@ body {
   width: 70vw;
 }
 
-h1 {
-  font-size: 72px;
-  margin-bottom: -10px;
-}
+.panel {
+  h1 {
+    font-size: 72px;
+    margin-bottom: -10px;
+  }
 
-h2 {
-  font-size: 24px;
-  margin-bottom: 60px;
+  h2 {
+    font-size: 24px;
+    margin-bottom: 60px;
+  }
 }
 
 .panel #button1 {
